# this_game_lol

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  test_json_file.py
config/: characters.json  game_config.json  keybinds.json  map_config.json
src/: BaseEventHandler.cpp  BaseEventHandler.hpp  Enemy.cpp  Enemy.hpp  Entity.cpp  Entity.hpp  EntityList.cpp  EntityList.hpp  EventHandler.cpp  EventHandler.hpp  Game.cpp  Game.hpp  GameEventHandler.cpp  GameEventHandler.hpp  GameObject.cpp  GameObject.hpp  GameObjectManager.cpp  GameObjectManager.hpp  JsonLoader.hpp  Keymap.h  Map.cpp  Map.hpp  Player.cpp  Player.hpp  Renderer.hpp  SceneManager.cpp  SceneManager.hpp  SimpleEventHandler.cpp  SimpleEventHandler.hpp  StartMenu.cpp  StartMenu.hpp  TextureManager.cpp  TextureManager.hpp  main.cpp
src/EntityComponents/: AdvancedCharacterComponent.hpp  Character.cpp  Character.h  Hitbox.h  Hitbox.hpp  NPC.cpp  NPC.hpp  NPCComponent.cpp  NPCComponent.hpp  Player.cpp  Player.h  Player.hpp  Projectile.cpp  Projectile.hpp  ProjectileComponent.cpp  ProjectileComponent.hpp  SpeedComponent.h  SpriteScroll.cpp  SpriteScroll.h  TextureComponent.cpp  TextureComponent.hpp  Transform.cpp  Transform.h  Transform.hpp  TransformComponent.cpp  TransformComponent.hpp
src/UI/: Button.cpp  Button.hpp  Menu.cpp  Menu.hpp  Text.cpp  Text.hpp  UI.cpp  UI.hpp  colors.hpp
src/include/: entt.hpp
